# ChangeLog for x11-wm/dwm
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/dwm/ChangeLog,v 1.28 2007/08/26 11:36:27 cedk Exp $

*dwm-4.4.1 (26 Aug 2007)

  26 Aug 2007; Cédric Krier <cedk@gentoo.org> +dwm-4.4.1.ebuild:
  Version bump

*dwm-4.4 (23 Aug 2007)

  23 Aug 2007; Cédric Krier <cedk@gentoo.org> +dwm-4.4.ebuild:
  Version bump

  25 Jul 2007; Christoph Mende <angelos@gentoo.org> dwm-4.2.ebuild:
  Stable on amd64 wrt bug #185308

  16 Jul 2007; Markus Rothe <corsair@gentoo.org> dwm-4.2.ebuild:
  Stable on ppc64; bug #185308

  16 Jul 2007; nixnut <nixnut@gentoo.org> dwm-4.2.ebuild:
  Stable on ppc wrt bug 185308

*dwm-4.3 (14 Jul 2007)

  14 Jul 2007; Cédric Krier <cedk@gentoo.org> +dwm-4.3.ebuild:
  Version bump

  14 Jul 2007; Torsten Veller <tove@gentoo.org> dwm-4.2.ebuild:
  Stable on x86

  14 Jul 2007; Cédric Krier <cedk@gentoo.org> -dwm-4.0.ebuild,
  -dwm-4.1.ebuild:
  Remove old

*dwm-4.2 (30 May 2007)

  30 May 2007; Cédric Krier <cedk@gentoo.org> -dwm-3.9.ebuild,
  +dwm-4.2.ebuild:
  Version bump

*dwm-4.1 (21 May 2007)

  21 May 2007; Cédric Krier <cedk@gentoo.org> +dwm-4.1.ebuild:
  Version bump

*dwm-4.0 (20 Apr 2007)

  20 Apr 2007; Cedric Krier <cedk@gentoo.org> -dwm-3.8.ebuild,
  +dwm-4.0.ebuild:
  Version bump

*dwm-3.9 (09 Apr 2007)

  09 Apr 2007; Cedric Krier <cedk@gentoo.org> -dwm-3.7.ebuild,
  +dwm-3.9.ebuild:
  Version bump

*dwm-3.8 (06 Mar 2007)

  06 Mar 2007; Cedric Krier <cedk@gentoo.org> -dwm-3.4.ebuild,
  -dwm-3.5.ebuild, +dwm-3.8.ebuild:
  Version bump

*dwm-3.7 (24 Feb 2007)

  24 Feb 2007; Cedric Krier <cedk@gentoo.org> +dwm-3.7.ebuild:
  Version bump

  20 Feb 2007; Cedric Krier <cedk@gentoo.org> -dwm-3.3.ebuild:
  Remove old

*dwm-3.5 (20 Feb 2007)

  20 Feb 2007; Cedric Krier <cedk@gentoo.org> +dwm-3.5.ebuild:
  Version bump

*dwm-3.4 (07 Feb 2007)

  07 Feb 2007; Cedric Krier <cedk@gentoo.org> -dwm-3.2.2.ebuild,
  +dwm-3.4.ebuild: