@@ -10,6 +10,7 @@ DIST dwm-4.2.tar.gz 19337 RMD160 24257387ac85b573a1fa44ffcd756962f76ef746 SHA1 0
 DIST dwm-4.3.tar.gz 18658 RMD160 55e6d9b60efa00a518af743ad5b2a69c29486a64 SHA1 7416708f979d0f4b54a14f1b85901efd90cf5973 SHA256 ff7919da06fb9b5e995b6af9df87a24045cd747efc3c774b8c287e50e1a8e7a1
 DIST dwm-4.4.1.tar.gz 19101 RMD160 3097c6c03c960a5283c0bcf91c854b4641e559e2 SHA1 b12b19c568c5b4953c3dde2a35976ad131557bfa SHA256 3a8e8d4a62450db8ec4f6eaeb583ccaecf4210ecfe2a1405333ea6d66501b850
 DIST dwm-4.4.tar.gz 19089 RMD160 093a53b3787d08fe71a48bb0a2f16084b6c4c5b1 SHA1 1e1b85595c98113835373835ffa11ed85bf1d49e SHA256 1320cc1730fce2a4c10f215597dba49338eaf596ae5a5f392d1111b69d69ffb8
+DIST dwm-4.5.tar.gz 17338 RMD160 b5224ebb7e0b9e1bdf883661db71cb5ecf402c28 SHA1 0e8f3ffda241cdf5c64d0984f36fa7739b5336b6 SHA256 00ee8229f56deeaff5be25a1f27c0fa07669e4cc827c0d38ff4b3e415f020752
 EBUILD dwm-4.2.ebuild 1654 RMD160 0c107e4502fd111b78785739820493b76b52d8b7 SHA1 a789f876176d7d7e7d0dc98a6214cc81321c709f SHA256 86c7efc2d50628bce78128e5e206a7bfd2dbf5db5a42cbd0c2c9080a93619f26
 MD5 934d6da3f72a0fec9015bd84711c4015 dwm-4.2.ebuild 1654
 RMD160 0c107e4502fd111b78785739820493b76b52d8b7 dwm-4.2.ebuild 1654
@@ -26,10 +27,14 @@ EBUILD dwm-4.4.ebuild 1655 RMD160 2bfddb185615a167a6e1f46b3f428b9b861d92e3 SHA1 
 MD5 a2d3d237f3da1920be3b65ecc09fd318 dwm-4.4.ebuild 1655
 RMD160 2bfddb185615a167a6e1f46b3f428b9b861d92e3 dwm-4.4.ebuild 1655
 SHA256 5fd9580c14764f7041f6ac3d2dd890c54128919ddde0023f70315da9d294f0bc dwm-4.4.ebuild 1655
-MISC ChangeLog 3194 RMD160 dca0397eb5c984c9c96307f86d52e98a6fd1556d SHA1 56c71e4e9bdcef40e64cec8d65a4057d44708621 SHA256 7889b390757caa8f9b41062f59621ea0f160398486b57a6460071ab2b837c345
-MD5 1f751901f3fef750d74ce88dbb45edb0 ChangeLog 3194
-RMD160 dca0397eb5c984c9c96307f86d52e98a6fd1556d ChangeLog 3194
-SHA256 7889b390757caa8f9b41062f59621ea0f160398486b57a6460071ab2b837c345 ChangeLog 3194
+EBUILD dwm-4.5.ebuild 1655 RMD160 add25cacbec72b48594f4fead29ad92ba2d63328 SHA1 99e30be97b93c70200742bf3e738173ddd08ea25 SHA256 cb65e106e116eaca4d193d1521938497c2e776c0172b94d68b1c798aa26b3415
+MD5 e56e60ea2ab6e19fe6ec065572c58b95 dwm-4.5.ebuild 1655
+RMD160 add25cacbec72b48594f4fead29ad92ba2d63328 dwm-4.5.ebuild 1655
+SHA256 cb65e106e116eaca4d193d1521938497c2e776c0172b94d68b1c798aa26b3415 dwm-4.5.ebuild 1655
+MISC ChangeLog 3298 RMD160 f69677b292dfe2c893cc025f228f32debdd5bf6b SHA1 9a3477747ccb08c5b2d9a83d3d3aa600aa9adf10 SHA256 c45e315ee7012deaf8370c277b71bcda15edc4fc77b2ae3b05b03d6d65c15088
+MD5 9353293e8dd71c68291349c4ad69a563 ChangeLog 3298
+RMD160 f69677b292dfe2c893cc025f228f32debdd5bf6b ChangeLog 3298
+SHA256 c45e315ee7012deaf8370c277b71bcda15edc4fc77b2ae3b05b03d6d65c15088 ChangeLog 3298
 MISC metadata.xml 461 RMD160 65756f7110f56fca05c3ede6d6f7123612ef1f37 SHA1 734881954c3c1fbef561df9eead496a99380e3d1 SHA256 35951214ca9ebfcb9bbc2822914bcef50153fac707e629ccadb6bee455b6a9bc
 MD5 b352d398a2b30d946f2ad2f2ae6c308c metadata.xml 461
 RMD160 65756f7110f56fca05c3ede6d6f7123612ef1f37 metadata.xml 461
@@ -46,3 +51,6 @@ SHA256 b67b246422963748df051e708611f6106bfa6ee4e1f8dbdba1b4a27b5ee1411c files/di
 MD5 735bc77ab484defda94ea2892cd3b2c6 files/digest-dwm-4.4.1 226
 RMD160 b4a71180cd7007d7f1e4e2706c1960624395123a files/digest-dwm-4.4.1 226
 SHA256 1d82c2d78c268edb1e91516a5fda0a8be72d4231736cff8822142e02f7145d50 files/digest-dwm-4.4.1 226
+MD5 f97b97d2cea55c6a3dbda082147f842c files/digest-dwm-4.5 220
+RMD160 ce53824c17a47222cf110fe8523361f6884aeb5f files/digest-dwm-4.5 220
+SHA256 80098bff67a91fdf9da20522323c469036e0c2f178ce663fc18c98c9f599a3f8 files/digest-dwm-4.5 220
