@@ -1,0 +1,66 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/dwm/dwm-4.5.ebuild,v 1.1 2007/09/22 11:16:56 cedk Exp $
+
+inherit toolchain-funcs savedconfig
+
+DESCRIPTION="a dynamic window manager for X11"
+HOMEPAGE="http://dwm.suckless.org/"
+SRC_URI="http://suckless.org/download/${P}.tar.gz"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
+IUSE=""
+
+DEPEND="x11-libs/libX11"
+RDEPEND=${DEPEND}
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+
+	sed -i \
+		-e "s/CFLAGS = -Os/CFLAGS += -g/" \
+		-e "s/LDFLAGS = -s/LDFLAGS += -g/" \
+		config.mk || die "sed failed"
+
+	if use savedconfig; then
+		restore_config config.h
+	fi
+}
+
+src_compile() {
+	local msg
+	use savedconfig && msg=", please check the configfile"
+	emake CC=$(tc-getCC) || die "emake failed${msg}"
+}
+
+src_install() {
+	emake DESTDIR="${D}" PREFIX="/usr" install || die "emake install failed"
+
+	insinto /usr/share/${PN}
+	newins config.h ${PF}.config.h
+
+	exeinto /etc/X11/Sessions
+	newexe "${FILESDIR}"/dwm-session dwm
+
+	insinto /usr/share/xsessions
+	doins "${FILESDIR}"/dwm.desktop
+
+	dodoc README
+
+	save_config config.h
+}
+
+pkg_postinst() {
+	einfo "This ebuild has support for user defined configs"
+	einfo "Please read this ebuild for more details and re-emerge as needed"
+	einfo "if you want to add or remove functionality for ${PN}"
+	if ! has_version x11-misc/dmenu; then
+		elog "Installing ${PN} without x11-misc/dmenu"
+		einfo "To have a menu you can install x11-misc/dmenu"
+	fi
+	einfo "You can custom status bar with a script in HOME/.dwm/dwmrc"
+	einfo "the ouput is redirected to the standard input of dwm"
+}
