@@ -1,0 +1,3 @@
+MD5 b178fefb55f015b648d756e70fcccccc dwm-4.5.tar.gz 17338
+RMD160 b5224ebb7e0b9e1bdf883661db71cb5ecf402c28 dwm-4.5.tar.gz 17338
+SHA256 00ee8229f56deeaff5be25a1f27c0fa07669e4cc827c0d38ff4b3e415f020752 dwm-4.5.tar.gz 17338
